docs: update README and AGENTS.md with new model picker, slash suggestions and web_fetch fallback